package.json: fixed

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "scripts": {
     "test": "ava"
   },
-  "files": {
+  "files": [
     "index.js"
-  },
+  ],
   "keywords": [
     "russian",
     "name",
